testutils/test/generated_ingresses/header_modifier_coffee_svc.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: header-modifier-coffee-svc-coffee
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header header1 value1;
      proxy_set_header header2 value2;
      more_set_headers header4:value1;
      more_set_headers header5:value3;
      more_clear_headers header7;
      more_clear_headers header8;
spec:
  tls:
    - hosts:
        - test.us-east.stg.containers.appdomain.cloud
      secretName: testSecret
  rules:
    - host: test.us-east.stg.containers.appdomain.cloud
      http:
        paths:
          - backend:
              serviceName: coffee-svc
              servicePort: 80
            path: /coffee
